# advent-of-code

./: Cargo.toml  README.md
aoc-macro/: Cargo.toml
aoc-macro/src/: lib.rs
src/: day1.rs  day10.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day6.rs  day8.rs  day9.rs  main.rs  utils.rs
src/utils/: bfs.rs  grid.rs  runner.rs
src/y2024/: day11.rs  day15.rs  day16.rs  day18.rs  day19.rs  day20.rs  day21.rs  day4.rs  day5.rs  day7.rs  day9.rs  mod.rs
