[package]
name = "advent-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["aoc-macro"]

[dependencies]
itertools = "0.13.0"
inventory = "0.3"
aoc-macro = { path = "./aoc-macro" }

[lib]
name = "advent_2024"
path = "src/lib.rs"
